force-app/main/default/objects/QuoteLineItem/fields/Bodega__c.field-meta.xml
<CustomField>
    <fullName>Bodega__c</fullName>
    <formula>IF(
    OR(Quote.Opportunity.Owner.CodigoUN__c= &apos;GE&apos;, Quote.Opportunity.Owner.CodigoUN__c= &apos;SE&apos;), &apos;LECEREP&apos;,
    IF(Quote.Opportunity.Owner.CodigoUN__c= &apos;EM&apos;, &apos;BSTGO_PP&apos;,null)
)</formula>
    <label>Bodega</label>
    <type>Text</type>
</CustomField>