force-app/main/default/objects/QuoteLineItem/fields/CodigoUN__c.field-meta.xml
<CustomField>
    <fullName>CodigoUN__c</fullName>
    <formula>Quote.Opportunity.Owner.CodigoUN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CodigoUN</label>
    <type>Text</type>
</CustomField>