force-app/main/default/objects/QuoteLineItem/fields/DescripcionVenta__c.field-meta.xml
<CustomField>
    <fullName>DescripcionVenta__c</fullName>
    <formula>Product2.DescripcionVenta__c</formula>
    <label>Descripcion Venta</label>
    <type>Text</type>
</CustomField>