force-app/main/default/objects/QuoteLineItem/fields/Descuento__c.field-meta.xml
<CustomField>
    <fullName>Descuento__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>El valor asignado recalculará el precio de venta en función de este campo.
Si necesita asignar un precio de venta específico, deje el % descuento en cero e ingrese el precio de venta.</inlineHelpText>
    <label>% Descuento</label>
    <precision>5</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>