force-app/main/default/objects/QuoteLineItem/fields/DescuentoSolicitado__c.field-meta.xml
<CustomField>
    <fullName>DescuentoSolicitado__c</fullName>
    <label>Descuento Solicitado</label>
    <precision>5</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>