force-app/main/default/objects/QuoteLineItem/fields/DescuentoVenta__c.field-meta.xml
<CustomField>
    <fullName>DescuentoVenta__c</fullName>
    <formula>IF(
    Descuento__c &gt; 0,
    Descuento__c,
    IF(
        PricebookEntry.UnitPrice &gt; UnitPrice,
        (PricebookEntry.UnitPrice - UnitPrice) / PricebookEntry.UnitPrice,
        0
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Descuento venta %</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>