force-app/main/default/objects/QuoteLineItem/fields/EM_AprobadorDescuento0510__c.field-meta.xml
<CustomField>
    <fullName>EM_AprobadorDescuento0510__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aprobador Descuento 5%-10%</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3 OR 4 OR 5 OR 6</booleanFilter>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>60 - Gerente de Venta</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>60 - Jefe de Venta</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Administrador del sistema</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Id</field>
            <operation>equals</operation>
            <value>00e5f000000vUSIAA2</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Id</field>
            <operation>equals</operation>
            <value>00e5f000000vTSeAAM</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Id</field>
            <operation>equals</operation>
            <value>00e5f000002uRWhAAM</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>PartidasDePresupuesto</relationshipName>
    <type>Lookup</type>
</CustomField>