force-app/main/default/objects/QuoteLineItem/fields/EM_AprobadorDescuento1030__c.field-meta.xml
<CustomField>
    <fullName>EM_AprobadorDescuento1030__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aprobador Descuento 10%-30%</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>60 - Gerente de Venta</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Administrador del sistema</value>
        </filterItems>
        <filterItems>
            <field>User.ProfileId</field>
            <operation>equals</operation>
            <value>00e5f000000vUSIAA2</value>
        </filterItems>
        <filterItems>
            <field>User.ProfileId</field>
            <operation>equals</operation>
            <value>00e5f000002uRWhAAM</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Aprobacion1030</relationshipName>
    <type>Lookup</type>
</CustomField>