force-app/main/default/objects/QuoteLineItem/fields/EM_AprobarDescuento0510__c.field-meta.xml
<CustomField>
    <fullName>EM_AprobarDescuento0510__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aprobar Descuento 5%-10%</label>
    <type>Checkbox</type>
</CustomField>