force-app/main/default/objects/QuoteLineItem/fields/EM_AprobarDescuento1030__c.field-meta.xml
<CustomField>
    <fullName>EM_AprobarDescuento1030__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aprobar Descuento 10%-30%</label>
    <type>Checkbox</type>
</CustomField>