force-app/main/default/objects/QuoteLineItem/fields/FechaEntrega__c.field-meta.xml
<CustomField>
    <fullName>FechaEntrega__c</fullName>
    <description>Fecha entrega del Item</description>
    <inlineHelpText>Fecha entrega del Item</inlineHelpText>
    <label>Fecha entrega</label>
    <type>Date</type>
</CustomField>