force-app/main/default/objects/QuoteLineItem/fields/GE_AprobarDescuento__c.field-meta.xml
<CustomField>
    <fullName>GE_AprobarDescuento__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Aprueba descuento de Ítem para Generación</description>
    <label>Aprobar Descuento</label>
    <type>Checkbox</type>
</CustomField>