force-app/main/default/objects/QuoteLineItem/fields/Imagen__c.field-meta.xml
<CustomField>
    <fullName>Imagen__c</fullName>
    <formula>Product2.Imagen__c</formula>
    <label>Imagen</label>
    <type>Text</type>
</CustomField>