force-app/main/default/objects/QuoteLineItem/fields/ImagenMax__c.field-meta.xml
<CustomField>
    <fullName>ImagenMax__c</fullName>
    <formula>Product2.ImagenMax__c</formula>
    <label>Imagen</label>
    <type>Text</type>
</CustomField>