force-app/main/default/objects/QuoteLineItem/fields/MTRL__c.field-meta.xml
<CustomField>
    <fullName>MTRL__c</fullName>
    <inlineHelpText>Número de material (requerido por mineras)</inlineHelpText>
    <label>MTRL</label>
    <length>10</length>
    <type>Text</type>
</CustomField>