force-app/main/default/objects/QuoteLineItem/fields/paso_precio_lista__c.field-meta.xml
<CustomField>
    <fullName>paso_precio_lista__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Paso precio lista</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>