force-app/main/default/objects/QuoteLineItem/fields/PrecioEstimado__c.field-meta.xml
<CustomField>
    <fullName>PrecioEstimado__c</fullName>
    <description>Valor estimado, usado en oportunidades No-Mix</description>
    <inlineHelpText>Valor opcional estimado, usado en oportunidades No-Mix</inlineHelpText>
    <label>Precio Estimado</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>