force-app/main/default/objects/QuoteLineItem/fields/QLBI__c.field-meta.xml
<CustomField>
    <fullName>QLBI__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Número de línea del ítem de la orden de compra del cliente
EXX_FE_QLIB en SAP</description>
    <inlineHelpText>Número de línea del ítem de la orden de compra del cliente</inlineHelpText>
    <label>QLBI</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>