force-app/main/default/objects/QuoteLineItem/fields/Total_precio_lista__c.field-meta.xml
<CustomField>
    <fullName>Total_precio_lista__c</fullName>
    <formula>PricebookEntry.UnitPrice *  Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total precio lista</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>